[package]
name = "gfold-py"
version = "0.3.2"
edition = "2021"

[lib]
name = "_gfold"
crate-type = ["cdylib"]

[dependencies]
gfold-core = { path = "../gfold-core", version = "0.3.2", features = ["python"] }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py311"] }
numpy = "0.29"
ndarray = "0.17"
