[package]
name = "gfold-core"
version = "0.1.0"
edition = "2021"

[dependencies]
clarabel = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", optional = true }

[features]
schema = ["dep:schemars"]

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
serde_json = "1"

[[bench]]
name = "solve"
harness = false
