[package]
name = "gfold-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
gfold-core = { path = "../gfold-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
schema = ["gfold-core/schema", "dep:schemars"]
wasm = ["dep:wasm-bindgen"]

[dependencies.schemars]
version = "0.8"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
