[package]
name = "gfold-py"
version = "0.2.0"
edition = "2021"

[lib]
name = "_gfold"
crate-type = ["cdylib"]

[dependencies]
gfold-core = { path = "../gfold-core", version = "0.1.0", features = ["python"] }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py311"] }
numpy = "0.29"
ndarray = "0.17"
