[package]
name = "gfold-wasm"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/samutoljamo/g-fold"

[lib]
crate-type = ["cdylib"]

[dependencies]
gfold-core = { path = "../gfold-core", version = "0.3.0", features = ["wasm"] }
wasm-bindgen = "0.2"
tsify = { version = "0.5", features = ["js"] }
serde-wasm-bindgen = "0.6"
